# AdeptSearch

./: CMakeLists.txt  README.md
sample_docs/: doc1.txt  doc2.txt
src/: indexer.cpp  indexer.h  main.cpp  searcher.cpp  searcher.h  tokenizer.cpp
